// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`5.35.0-006 should execute migration 1`] = `
Object {
  "PK": "T#root#L#en-US#CMS#CME#642d3f644d7cdc000821b67e",
  "SK": "L",
  "TYPE": "cms.entry.l",
  "created": Any<String>,
  "createdBy": Object {
    "displayName": "Admin",
    "id": "admin",
    "type": "admin",
  },
  "createdOn": "2023-04-05T09:29:08.538Z",
  "entity": "CmsEntries",
  "entryId": "642d3f644d7cdc000821b67e",
  "id": "642d3f644d7cdc000821b67e#0001",
  "locale": "en-US",
  "locked": false,
  "meta": Object {},
  "modelId": "acoSearchRecord",
  "modified": Any<String>,
  "modifiedBy": Object {
    "displayName": "Admin",
    "id": "admin",
    "type": "admin",
  },
  "ownedBy": Object {
    "displayName": "Admin",
    "id": "admin",
    "type": "admin",
  },
  "savedOn": "2023-04-05T09:32:01.638Z",
  "status": "draft",
  "tenant": "root",
  "values": Object {
    "content": "Page 1 Page 1 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat.",
    "data": Object {
      "createdBy": Object {
        "displayName": "Admin",
        "id": "admin",
        "type": "admin",
      },
      "createdOn": "2023-04-05T09:29:08.538Z",
      "id": "642d3f644d7cdc000821b67e#0001",
      "locked": true,
      "path": "/untitled-lg3hm56i",
      "pid": "642d3f644d7cdc000821b67e",
      "savedOn": "2023-04-05T09:32:01.638Z",
      "status": "published",
      "title": "Page 1",
      "version": 1,
    },
    "location": Object {
      "folderId": "ROOT",
    },
    "title": "Page 1",
    "type": "PbPage",
  },
  "version": 1,
  "webinyVersion": Any<String>,
}
`;

exports[`5.35.0-006 should execute migration 2`] = `
Object {
  "PK": "T#root#L#en-US#CMS#CME#642d3f644d7cdc000821b67e",
  "SK": "REV#0001",
  "TYPE": "cms.entry",
  "created": Any<String>,
  "createdBy": Object {
    "displayName": "Admin",
    "id": "admin",
    "type": "admin",
  },
  "createdOn": "2023-04-05T09:29:08.538Z",
  "entity": "CmsEntries",
  "entryId": "642d3f644d7cdc000821b67e",
  "id": "642d3f644d7cdc000821b67e#0001",
  "locale": "en-US",
  "locked": false,
  "meta": Object {},
  "modelId": "acoSearchRecord",
  "modified": Any<String>,
  "modifiedBy": Object {
    "displayName": "Admin",
    "id": "admin",
    "type": "admin",
  },
  "ownedBy": Object {
    "displayName": "Admin",
    "id": "admin",
    "type": "admin",
  },
  "savedOn": "2023-04-05T09:32:01.638Z",
  "status": "draft",
  "tenant": "root",
  "values": Object {
    "content": "Page 1 Page 1 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat.",
    "data": Object {
      "createdBy": Object {
        "displayName": "Admin",
        "id": "admin",
        "type": "admin",
      },
      "createdOn": "2023-04-05T09:29:08.538Z",
      "id": "642d3f644d7cdc000821b67e#0001",
      "locked": true,
      "path": "/untitled-lg3hm56i",
      "pid": "642d3f644d7cdc000821b67e",
      "savedOn": "2023-04-05T09:32:01.638Z",
      "status": "published",
      "title": "Page 1",
      "version": 1,
    },
    "location": Object {
      "folderId": "ROOT",
    },
    "title": "Page 1",
    "type": "PbPage",
  },
  "version": 1,
  "webinyVersion": Any<String>,
}
`;

exports[`5.35.0-006 should execute migration 3`] = `
Object {
  "PK": "T#root#L#en-US#CMS#CME#642d401c4d7cdc000821b681",
  "SK": "L",
  "TYPE": "cms.entry.l",
  "created": Any<String>,
  "createdBy": Object {
    "displayName": "Admin",
    "id": "admin",
    "type": "admin",
  },
  "createdOn": "2023-04-05T09:32:12.436Z",
  "entity": "CmsEntries",
  "entryId": "642d401c4d7cdc000821b681",
  "id": "642d401c4d7cdc000821b681#0001",
  "locale": "en-US",
  "locked": false,
  "meta": Object {},
  "modelId": "acoSearchRecord",
  "modified": Any<String>,
  "modifiedBy": Object {
    "displayName": "Admin",
    "id": "admin",
    "type": "admin",
  },
  "ownedBy": Object {
    "displayName": "Admin",
    "id": "admin",
    "type": "admin",
  },
  "savedOn": "2023-04-05T09:37:04.998Z",
  "status": "draft",
  "tenant": "root",
  "values": Object {
    "content": "Page 2 Page 2 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ut sem vitae risus tristique posuere.",
    "data": Object {
      "createdBy": Object {
        "displayName": "Admin",
        "id": "admin",
        "type": "admin",
      },
      "createdOn": "2023-04-05T09:32:12.436Z",
      "id": "642d401c4d7cdc000821b681#0001",
      "locked": false,
      "path": "/untitled-lg3hq32s",
      "pid": "642d401c4d7cdc000821b681",
      "savedOn": "2023-04-05T09:37:04.998Z",
      "status": "draft",
      "title": "Page 2",
      "version": 1,
    },
    "location": Object {
      "folderId": "ROOT",
    },
    "title": "Page 2",
    "type": "PbPage",
  },
  "version": 1,
  "webinyVersion": Any<String>,
}
`;

exports[`5.35.0-006 should execute migration 4`] = `
Object {
  "PK": "T#root#L#en-US#CMS#CME#642d401c4d7cdc000821b681",
  "SK": "REV#0001",
  "TYPE": "cms.entry",
  "created": Any<String>,
  "createdBy": Object {
    "displayName": "Admin",
    "id": "admin",
    "type": "admin",
  },
  "createdOn": "2023-04-05T09:32:12.436Z",
  "entity": "CmsEntries",
  "entryId": "642d401c4d7cdc000821b681",
  "id": "642d401c4d7cdc000821b681#0001",
  "locale": "en-US",
  "locked": false,
  "meta": Object {},
  "modelId": "acoSearchRecord",
  "modified": Any<String>,
  "modifiedBy": Object {
    "displayName": "Admin",
    "id": "admin",
    "type": "admin",
  },
  "ownedBy": Object {
    "displayName": "Admin",
    "id": "admin",
    "type": "admin",
  },
  "savedOn": "2023-04-05T09:37:04.998Z",
  "status": "draft",
  "tenant": "root",
  "values": Object {
    "content": "Page 2 Page 2 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ut sem vitae risus tristique posuere.",
    "data": Object {
      "createdBy": Object {
        "displayName": "Admin",
        "id": "admin",
        "type": "admin",
      },
      "createdOn": "2023-04-05T09:32:12.436Z",
      "id": "642d401c4d7cdc000821b681#0001",
      "locked": false,
      "path": "/untitled-lg3hq32s",
      "pid": "642d401c4d7cdc000821b681",
      "savedOn": "2023-04-05T09:37:04.998Z",
      "status": "draft",
      "title": "Page 2",
      "version": 1,
    },
    "location": Object {
      "folderId": "ROOT",
    },
    "title": "Page 2",
    "type": "PbPage",
  },
  "version": 1,
  "webinyVersion": Any<String>,
}
`;

exports[`5.35.0-006 should execute migration 5`] = `
Object {
  "PK": "T#root#L#en-US#CMS#CME#642d3f644d7cdc000821b67e",
  "SK": "L",
  "created": Any<String>,
  "data": Object {
    "compression": "gzip",
    "value": "H4sIAAAAAAAAE6VUTW/bMAz9K4J2dTzns2luG7bDgGEJmqxAdykYi0mIyZIrUQmCIP99tPMBbCi6AoEPFp/IJ/KR0kFX3qD9ZvREQ+nnCKHcPGDpg9GZ3mKI5J2edDMdYYtmKmvdK3r9TjHoFMNFcT/p9yZFNx/1x78kwPoSLIoPus7PuQCRgVMUwARYcUMJNqEAB837uvGcLWewRtlh4ja0MVVXgNI7RsdXSJ1/333ASlEdU6WMtz6oSKygQs6UxEQsGTkFBYZqiiW5tUJLnKt5ijU6QzGi2kKgFBU6EiqnMHgxLFZyoNByoMj0kjBXXxJFVaYQU8xUReqlsbck0gRQPjgImJ3CT7mQJB2McLhkLWQqsSRVicpeGYJKWVqKtzAwoMQB52fduFX6oFfeGgxtRx6m04U+HkWKgMBoPu8bB2qbZSpyjWonFS+mFFdb2P8QNQT91KISL1WFfUs5GvRMfzUaDMxdacqiKMa97nJ01zYAHbRyB++bVp0PfaXnvftJMc6H157/RqFegY2Yab9zNyS6wyW5/eNl7nSRyyfu9FbuH2TZDIyITCu64XQr9UZRgEOSShZPs6+yW1Yxb/XLrUQ+P5+p/oYD7B6vk22A4ZrB/5Ku3/R69V7cOAzv7Ou7Lvz1ftdpaSlu8N9n4zIdJ0lr4I04f0yurcp07Lq/qYYjkik//gFiJ98pjAQAAA==",
  },
  "entity": "CmsEntries",
  "index": "root-headless-cms-en-us-acosearchrecord",
  "modified": Any<String>,
}
`;

exports[`5.35.0-006 should execute migration 6`] = `
Object {
  "PK": "T#root#L#en-US#CMS#CME#642d401c4d7cdc000821b681",
  "SK": "L",
  "created": Any<String>,
  "data": Object {
    "compression": "gzip",
    "value": "H4sIAAAAAAAAE6VTTW8aMRD9K5Z7ha33owT21ko9VKoCSmik9hIZewCrXntjj0EI8d87u9mgNonSSMgH288z43kzb4688RrsN81rLpW/BRnU9gaUD5qP+A5CNN7xOh/xKHeg53TmhSjKsajG4tNSzOryqhZVNptNf5GD9UpaIBtw4x+3BESUmCIBOsg1diGlTUDAkeOh7SwXq4XcAL2gwd61u7KCAOUdgsMzxIbtuw/QMNPG1DDtrQ8sGmSyARwx8omgEDAFJrVpTVTGbRhYgxm7Tk6xhCyS+86gBBZMTJEhbWgeErDWxwQBsoEK9uSPfO2thtAX6WY+X/LTibILIBH0l0NnYPr66ca4jsgjsaerNrG18nBNCRL6uUfJn5iFQx9yUhW6Ermq9JXSSggxLfLVZJp3ocDJvgLB+656w6evtaGo8yKrysnQht9AodfSRhhxv3cXJLqHlXGHuycpcJHRInPzVu4f6NgRIHWZtbngd0t8I1UAQyImy5+Lr/Sqmpj19cssed7fD6H+hYPc353FpiXKcwb/S7p90+pVqV4ohnf29V0z+HLk/priZ8poJW7J8mNyPSU9tpty+1AWkSR++gOp5TpPHAQAAA==",
  },
  "entity": "CmsEntries",
  "index": "root-headless-cms-en-us-acosearchrecord",
  "modified": Any<String>,
}
`;
